--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "wlpflow",
   "version": "0.0.1",
   "private": true,
-  
+  "scripts": {
+    "start": "NODE_ENV=development nodemon index.js"
+  },
   "dependencies": {    
     "socket.io": "*",
     "express" : "",
